# kmu_project

./: .gitignore  README.md  app.py  config.py  env.py  errors.py  finalize.py  flake.nix  font.py  initialize.py  main.py  playwright.py  playwright_install.py  pyproject.toml  setup.sh  test.py  test_ollama.py  tools.py  utils.py
components/: codegen.py  functions.py  log.py  nav_bar.py  query.py
functions/: q.py  tools.py  zz.py
initialize/: __init__.py  font.py
ref/: models.py  prompt.py  test_ollama.py  tools.py  vision.py
tab/: query.py
utils/: stt.py
