[project]
name = "kmu-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.1.0",
    "dearpygui-ext>=2.0.0",
    "icecream>=2.1.8",
    "ollama>=0.6.0",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
    "returns>=0.26.0",
]
